# hcnet-core20.2.0

./: .dir-locals.el  .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  Cargo.toml  INSTALL-Windows.md  INSTALL.md  Makefile.am  cackle.toml  ci-build.sh  configure.ac  deny.toml  hash-xdrs.sh  install-rust.sh
.github/workflows/: build.yml
Builds/VisualStudio/: stellar-core.vcxproj  stellar-core.vcxproj.filters
docker/: Dockerfile.testing
docs/: fuzzing.md  hcnet-core_example.cfg  ledger.md  metrics.md  versioning-soroban.md  versioning.md
docs/software/: admin.md  commands.md
lib/: spdlog.cpp
lib/fmt/: README.rst
scripts/: OverlaySurvey.py  ParseDump.py  README.md
soroban-settings/: README.md
src/: Makefile.am
src/bucket/: Bucket.cpp  Bucket.h  BucketApplicator.cpp  BucketApplicator.h  BucketIndex.h  BucketIndexImpl.cpp  BucketIndexImpl.h  BucketInputIterator.cpp  BucketList.cpp  BucketList.h  BucketManager.h  BucketManagerImpl.cpp  BucketManagerImpl.h  BucketOutputIterator.cpp  BucketOutputIterator.h  FutureBucket.cpp  LedgerCmp.h  MergeKey.cpp  MergeKey.h  readme.md
src/catchup/: ApplyBucketsWork.cpp  ApplyBucketsWork.h  ApplyBufferedLedgersWork.cpp  ApplyCheckpointWork.cpp  ApplyCheckpointWork.h  AssumeStateWork.cpp  AssumeStateWork.h  CatchupManagerImpl.cpp  CatchupManagerImpl.h  CatchupWork.cpp  CatchupWork.h  IndexBucketsWork.cpp  IndexBucketsWork.h  ReplayDebugMetaWork.cpp  ReplayDebugMetaWork.h  VerifyLedgerChainWork.cpp  (+1 more)
test-tx-meta-baseline-current/: InvokeHostFunctionTests.json
test-tx-meta-baseline-next/: InvokeHostFunctionTests.json
(+306 files in other folders)
