[workspace]
members = ["src/rust", "lib/tracy-client-sys"]

[patch.crates-io]
tracy-client-sys = { path = "lib/tracy-client-sys" }

#[patch."https://github.com/hcnet/rs-soroban-env"]
#soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
#soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }
#soroban-test-wasms = { path = "../rs-soroban-env/soroban-test-wasms/" }

# [patch."https://github.com/hcnet/rs-hcnet-xdr"]
# hcnet-xdr = { path = "../rs-hcnet-xdr/" }

# [patch.crates-io]
# hcnet-xdr = { git = "https://github.com/hcnet/rs-hcnet-xdr", rev = "2775f4b6" }
# wasmi = { package = "soroban-wasmi", git = "https://github.com/hcnet/wasmi", rev = "862b32f5" }
# soroban-env-common = { git = "https://github.com/hcnet/rs-soroban-env", rev = "eda2ab70" }
# soroban-native-sdk-macros = { git = "https://github.com/hcnet/rs-soroban-env", rev = "eda2ab70" }

[profile.release]
codegen-units = 1
lto = true
